tests/compile_fail/derive_payload_bare_target_value.stderr
error: TargetValue requires a float argument: `TargetValue(42.0)`
 --> tests/compile_fail/derive_payload_bare_target_value.rs:8:33
  |
8 | #[metric(name = "m", polarity = TargetValue)]
  |                                 ^^^^^^^^^^^
